--- a/design_dance/f_mainUser.resx
+++ b/design_dance/f_mainUser.resx
@@ -18982,4 +18982,80 @@
         LFttqQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAACMuAAAjLgAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP7+/gD+/v4V/v7+Sv7+
+        /l3+/v5g/v7+YP7+/mD+/v5g/v7+Xf7+/lb+/v5N/v7+Q/7+/jv+/v4x/v7+Kf7+/ij+/v4x/v7+O/7+
+        /kP+/v5N/v7+Vf7+/lz+/v5h/v7+Y/7+/mP+/v5j/v7+Xf7+/kv+/v4Y/v7+AAAAAAAAAAAA/v7+AP7+
+        /l7+/v75/v7+/v7+/v/+/v7//v7+//7+/v/+/v7+/v7+/f7+/vr+/v73/v7+8/7+/u7+/v7o/v7+6P7+
+        /u7+/v7z/v7+9/7+/vr+/v78/v7+/v7+/v/+/v7//v7+//7+/v/+/v7+/v7++/7+/mv+/v4AAAAAAP7+
+        /gD+/v4r/v7+pf7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+q/7+
+        /iv+/v4A/v7+AP7+/kv+/v7W/v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7V/v7+Sv7+/gD+/v4N/v7+j/7+/vr+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/vr+/v6O/v7+DP7+/oj+/v74/v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+//7+/vf+/v6G/v7+4f7+/v/+/v7//v7+/f7+/uj+/v75/v7+//7+
+        /v7+/v7p/v7++f7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /vj+/v7p/v7+/v7+/v/+/v75/v7+6P7+/v7+/v7//v7+//7+/uH+/v6Q/v7+/v7+/v/+/v7I/v7+Nf7+
+        /qz+/v7//v7+5f7+/kb+/v6r/v7+//7+/v/+/v77/v7++/7+/v/+/v7//v7+//7+/v/+/v76/v7++/7+
+        /v/+/v7//v7+qf7+/kb+/v7m/v7+//7+/qv+/v41/v7+yf7+/v/+/v7+/v7+k/7+/iv+/v7X/v7++P7+
+        /lX+/v4A/v7+SP7+/vj+/v6l/v7+AP7+/kn+/v71/v7++v7+/nz+/v59/v7++v7+/v/+/v7//v7++v7+
+        /nr+/v59/v7++/7+/vT+/v5I/v7+Af7+/qf+/v73/v7+R/7+/gD+/v5X/v7++f7+/tf+/v4q/v7+AP7+
+        /l3+/v6s/v7+EP7+/gD+/v4Q/v7+xf7+/mj+/v4A/v7+Ev7+/sv+/v7a/v7+Gf7+/h3+/v7c/v7+//7+
+        /v/+/v7b/v7+G/7+/hr+/v7b/v7+yP7+/hD+/v4A/v7+a/7+/sT+/v4Q/v7+AP7+/hH+/v6u/v7+Xv7+
+        /gD+/v4A/v7+Bf7+/hT+/v4B/v7+AP7+/gD+/v5s/v7+N/7+/gD+/v4A/v7+iP7+/qz+/v4D/v7+B/7+
+        /rb+/v7//v7+//7+/rX+/v4H/v7+BP7+/q7+/v6F/v7+AP7+/gD+/v46/v7+bP7+/gD+/v4A/v7+Af7+
+        /hT+/v4E/v7+AAAAAAAAAAAAAAAAAAAAAAAAAAAA/v7+AP7+/hH+/v4K/v7+AP7+/gD+/v5F/v7+c/7+
+        /gD+/v4A/v7+jv7+/v/+/v7//v7+jP7+/gD+/v4A/v7+df7+/kT+/v4A/v7+AP7+/gr+/v4Q/v7+AAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/v7+AP7+
+        /hP+/v4q/v7+AP7+/gD+/v5n/v7+//7+/v/+/v5l/v7+AP7+/gD+/v4q/v7+Ev7+/gAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD+/v4A/v7+AP7+/gH+/v4A/v7+AP7+/kP+/v73/v7+9v7+/kP+/v4A/v7+AP7+/gH+/v4A/v7+AAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP7+/gD+/v4B/v7+af7+/vr+/v77/v7+cf7+/gP+/v4AAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD+/v4A/v7+A/7+/ln+/v7U/v7++f7+/vn+/v7Y/v7+Y/7+
+        /gX+/v4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/v7+AP7+/gD+/v4q/v7+T/7+/jD+/v7G/v7+yf7+
+        /jD+/v5N/v7+Lv7+/gH+/v4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD+/v4A/v7+Af7+/gj+/v4B/v7+MP7+
+        /rX+/v6z/v7+NP7+/gH+/v4I/v7+Av7+/gAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/v7+AP7+
+        /gP+/v4Q/v7+fP7+/oP+/v4Q/v7+BP7+/gAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD+/v4A/v7+AP7+/gD+/v5e/v7+a/7+/gD+/v4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/v7+AP7+/i/+/v41/v7+AP7+/gAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD+/v4A/v7+BP7+/gX+/v4AAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA///////////////////////////AAAADwAAAA4AAAAGAAAABAAAAAAAA
+        AAAAAAAAAAAAAAiAABCIgAERjMADMfzMMz//zDP//+w3///4H///8A////AH///gB///+B////5////+
+        f////n////////////////////////////8=
+</value>
+  </data>
 </root>
