--- a/design_dance/f_userAct.resx
+++ b/design_dance/f_userAct.resx
@@ -145,61 +145,52 @@
         51TCfWjm+rQAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="b_play.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="roundedButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAB3RJ
-        TUUH4wINDC4GP9AdTAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAt/SURBVHhe
-        7Z15rB9VFcdHqohoBVsMKbiU8nh9jy5AS6Iosoqk0C2axqR/EKKxkcSmJDUxRBJrqMEQARs2TYxojZbS
-        SkjLVpdaF7S2j6Utfe17z+bRAgIiQheL2Bb8HHJ+zfR632+W38xv5jdzPsk3LO/ec+8959w7d+Y3S5A3
-        24NJx+8Ieq7cGUy8Ed0/EHQ/g17i319Db6GX0Ta0Di3lb1cNB+NP1upGp6JB/zl6Hb2dUP9FD6I5fcH0
-        96hJo+y8HQTHEbR5BP9JDWQW2oO+hO1R2oxRRoaCrrMJ1OOhwGWtfg4PM7Q5oyzorJfj+5uhYOWplf1B
-        7zht3igSNmsnMCt/4QlS3pJ9xSI7LBQIx/mxBGFTKChtF33YSAKeo10y2sVzwUfeRwD+5AakIB1Cy9Bo
-        7Z6RJ7LsMvMeCgUgrp6i3rf552w0kZl7ytZgyof4f93892VI9hEbkFwb8NWP0rPYmqndNPICJ9/gcf5I
-        ktm5nE3bZK0eCeXPQLej/yCfzSitJrlOV3NGluDcqSjubn/zYHDWuVo1MSTNx0m2Bzx242gvdRfaJjFD
-        cOa7cOxfHUePpLt+F1zybq3aEtiSQ8bukO0k2kwiTVNTRiswo2Z5HOzTjVolM7YHkz5A+7diWw4pvjab
-        6RB1bxMbas5Iis7+JxzH/p849t6hVXJhKOg6j3bSnnrKJeU5aspIAjPoU44zfXpKfvnTKrlBMh5HfxbQ
-        3l6n/VgiSdfK/kLNGXHAcd93HenoiMxOLd4WaPM0tCrUhyTaj663TWIMZMbhrBdCzvNplRZvO5xpXE37
-        w05/4koOa+erKcMHDpoYcphXcojQ4oWwJZj6fvpxC0qzSTyMlrGCfVDNGWEI7nzHYa52yyZRixcKfZnK
-        Mf4vTv/i6nnG+nk1ZTTAKXL65XPYO8Lh92rRUqCHrOuQ3HLm7XOE1tgmMQQOWek46BiRIF/ToqWCII6j
-        f/e5/Y2pA4xrcVYXszoaZvivPA46Khw1S4uWEvp4KdoZ7nMCbSGRPqmm6glOaHr5l134RVq0tPQF008k
-        UW+mv3KzqXccTXSEunfuCiacpObqBQ542nHIMSIBPqFFSw+BlJ+e17tjiKkXWQ2vUVP1gYFXJgEEOWOR
-        QNL3V9yxxNR6SSQ1V30YcKUSoMG2YPKp9H85SnMDykGSYEk7Ln0XDoOtZAI0IJCXMI4d7rhiaiv1C70I
-        ljsMstIJIOg9jktRmlvbj3BIuWMo6HqvmqsWDLDyCdBAH275gzvGOGIl+KmaqRYMrjYJIMgmkXF9Gb0a
-        Hmcc4YteNVMdGFitEqABG7wxLO0/ZIyxN4msAtX7LYGB1TIBGpAElzPOQXfcPlF2rlarDgys1gkgyCNw
-        zG55pqHZrer75DkHrVIdGFjtE6ABM7yHMcvDK64fDpMg87VYtWBwlgAh9EriFxn7o6iPwK+o9A9GDNIS
-        oM4QZEuAOkOQLQHqDEG2BKgzBNkSoM4QZEuAOkOQLQHqDEG2BKgzBNkSoAQU9vANQbYEKBC5yoif5fKz
-        3NF8cCDo/uX2YFKX/jl/aNQSoCDw76eR7weofTuCnmu1WL7QmCVAQeDfps9ksBr8JPeXadOQJUAByNPK
-        +DfyZhSSYK3c06jVsodGLAEKQBPA63NXHA5+ndtKQAOWAAXB7E7yqPsPtFq2YNgSoCDEt/j4oOvzJvqq
-        Vs0OjFoCFAingdPwc6x7EtF+ThE/plWzAaOWAAVDUOU9iSt8/vfoYa2WDRi0BCgB+uaTu1z/+0SyXKzV
-        WgeDlgAlQS4Hx1wJHtMqrYMxS4ASIW9E4+xgyBeLsEiUKVqlNTBmCVAySAB5WMUbj4Yo8x0t3hoYswQo
-        IXLxxxePkAa0aGtgyBKghJAA8mFOb0waGgy6J2jx9GDIEqCEsCEchf//4cYjLJLkC1o8PRiyBCgp+F8+
-        zeuNi2qpFk0PRiwBSgozfLEvJg3x9xVaND0YsgQoKez05/piEtKjWjQ9GLEEKCnM8It9MWmIv2/UounB
-        kCVASSHA8oYzb1xE8nOyFk0PhiwBSoodAmoOK8DXfTFpyDaBFYcVIOrL7XYaWFXkWwb4P+pCUOtvLcOQ
-        JUAJYfbP8MXD0RlaPD0YsQQoIfj+t24sHO3Uoq2BIUuAkjEYdH/WFwtHN2nx1sCQJUCJ0E/k7XLj4Oit
-        /gSf7G8KxiwBSoLcEobPm37ES/WIVmkdjFkClAC9KfQe1/8+EZPsvuOEQUuAgsHPo1GcmS+nfg9ptWzA
-        qCVAgRDQC/Bz3AdD9v0tOPOjWjUbMGoJUADDwfiT8e/d6EjY3800EHR/RatnB4YtAdoMs34Wvn3O9XWE
-        fqTVswXDlgBtQm7ixKfyEmqvr5toXW6fucW4JUDO6HX9RWh/2LdxxLJvL4joZPChvAdoW9inCfTj3D9w
-        TSOWADmgm7xlKPYmLyR5SdQCNZUvNGYJkDEEbz5L90s+f8bQBntNXIeim7zHXB/G1L/QIrkiqObaA41a
-        ArSIvMAJX8km70DYdwl0/1DQ9WE1115o3BKgBVjqL0TP+HwXJeoN9Qe9V6ipYqAjlgApaHGTJ6+F/W4p
-        vkdMRywBEoJf5qGXw36KKzaIv8en5fkELZ2yBIgJM/ZMfLLO9VFMvSqndvKbv5orB3TMEiAC3eR9A70R
-        9k1Myetglxe2yYuCzlkCNIGN2meYudt9vomhQepfrqbKCZ20BPAg3wkmeIm+Lh7SGyTNklJs8qKgs5YA
-        DoxbNnlNH8poog0kTo+aKj902BJAkUuwzNyolzONpHJu8qKg47VPgNAmr9nn40fSO5s8Zv0paq6zoPO1
-        TgDGdxHj7HfHHVMD6DI11ZkwgFomAMv9mBY2eQc7ZpMXBYOpVQLIMZrAX8PYXnHHGlPr0UQ11/kwmNok
-        QH/QexZj+o07xph6URJHTVUHBlb5BJB76mTJZjypN3nUH6vmqgWDq3QCEDh50dIOd1wxtZX6F6ipasIg
-        K5kA24LJp9L/5Sj1Jo+N4vFqrrow2EolQGiT9093LDH1MMEfr+aqDwOuTAIQuG76LLt071giVM1NXhQM
-        vOnnS0mA7B5Fzom+YPqJBP9m+it32njH0URHqHvnrmDCSWquXuCAqBscZmvRUkL/LkU7Q/1Noi3y9W41
-        VU9wwn2OU44Rs2OhFi0VBG4c/Wva9yY6wLgW5/7UTSfAce97HgcdFX+/V4uWArlvnn5dh14L9zOB1rC7
-        z/bji50MM2G+x0lh7RGna/FCoS9T0Z9DfUuiv9dykxcFCSA7Z5/DjgrHXajFC0HfnHULOhTuV0wdRnL7
-        9mg1Z4TRJfV5ddZIWq3F2w5nIVfT/rDTn7h6Ap2vpoyRwEm3h5zmk7yXbpoWbwu0eRpaFepDEu1D15Pc
-        o9Sc0Qw5FXIc6NPT7bg0KisSh6UFtLfXaT+WOFyttU1eQnC6vKBws+tMj+7WKrkwFHSdRxubnDbjag+a
-        o6aMpDDrZjoO9YoZ9i2tkhnMWPl8+q3YT7PJO0Td28SGmjPSgiM3ehzs0z1ZXUTB1my0O2Q7iTbJqqGm
-        jFYhAabg1Lg3TfSxQz9XqyaGtsajBzx242gvdRfaJi8HcK7cHu1zuk+yZP9MEkerR8KMlQcs5bz8TbWR
-        VKs5DJ2u5oyskVmFk9c4To+jLegmgjMX9cgNGSTGWFaJXv55pewd+PsfUZobNETPYmemdtPIE7mHDodL
-        sHyBaLdklbEree2GXfUYnN70XoG8xYzfyMpxjnbJaDfDwfgTCETUF6zz0OtI3phlm7yi0YtE30RpbqlO
-        o5XyW782b5QFdu9nE5zHnWBlJpb77Sz3M7Q5o4ywGsgvh/MI1pNuAFuQ7O6vteW+wyBonyN4ct99mjtz
-        5HCyGs2WR7PVpNGJyC+EHLOvICFuIKCrWMblpYlyf8G/kbxU6QUkb8t+hDJLZJmXd+xpdSNXguB/xgYl
-        Ht7CBWcAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAHgAAAB4CAYAAAA5ZDbSAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3XAAAN1wFCKJt4AAAAB3RJ
+        TUUH4wINDQQbMn/XigAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAmKSURBVHhe
+        7Z1pzB1VGccLXahtA7aNNKKFlgqBokCDhAoNim3R0tIPLKkUlxgTPkhYGtZIEzAukKJFhRLAJiRoFIGQ
+        oIQ9REVSIUqtSwRkC1tkkx1ckPL7z31u0pR3ljNzZ39+yf/Te+aZ8/yf9849d+bMOePKZOvWrQehs9BP
+        0Gb0T/QyEs+hv6Bb0PloKZpqhzpNhSLNQd9HT6BQXkdXo8MtnNMUKMre6Br0PzQK7kWLLLxTFxRhIlqL
+        3kZlcCPa3U7nVAnGz0V/UhVKRpfuNWiCndopG8xeiDRoqhL9My20LjhlgclHoLIuyWm8gy5FO1t3nFGC
+        sQeiV1AIGnhtQT9DVyCNsvXT6R6U9x/lGXScdcsZBRg604zNyib0ZTTdQrwP/jYJLUO/QHlG4DejORbO
+        KQJGqghZeBAtscMywzH7opsUIJA30JnIB2F5wbxj5WQG9P042Q7LBcevRE8qWCA+CMsDpo1H+lQm8S46
+        1Q4pDLGmofUo9LL9f7QB7WKhnDQw60tyLoW11nykEHcBuj86QxjPolUWxkkCo/4YWRaPHhjsYM1HDrF1
+        BTkFvYpCuRXtaaGc7cGcvSKb4nkTfcSalwrn2Q3doJMGoj6eiyZaKGcIppwnhxL4njWtDM65AuV5WqXH
+        k4daGEdgyO2RNWOjgVUtv0E571R0McozCLsSxf427xUY8aJciWGTNasN+nCA+hH1JgzdR19tYfoJBsyO
+        rIhnnTWtFfqxI/o6Cr2FKnSFmmeh+gWJa8pNEidY00ZAfz6Mro16FsZbSGONSRaqH5DwEmWfwGetaaOg
+        X3ralXZjZiweRostTPch2WOitOM52Jo2Dvo2BV2I/quOBqCB40Y0w0J1F5I8ThkncJA1bSz0UXPF7o56
+        G8ZL6CRU2g2c2iG51hdY0M8dkB5bvqBOB/IbtK+F6hYk1okCD6G/s5BmfuoyHIIu8xehnSxUNyChThV4
+        CP0+Ej0SZRDG31F3pvKSTCcLLOj7B9C30X+USAC6c7bSwrQbEulsgYeQgx6m3BVlk52H0I4Wor2QROcL
+        LMhDg7CvIY2cszLbDm8vJNGLAg8hn11R1kHYR+2w9kISvSrwEPJajHRXK44HrGm7IZFeFliQ22T0TfRv
+        JboNz6P9rVm7IZHeFngIOc5D30F6hqx3nbvzHJlkel/gTkMBvcBdhgJ6gbsMBfQCdxkK6AXuMhTQC9xl
+        KKAXuMtQQC9wl6GAXuCKwEu9BP9TdAfS5IJZ9qfy4CRe4ArARy1psT26JbrCmpQDJ/ACl4w8HFg5Jnqq
+        peKX8+yZwF7gksHDswdWJqJL9+jfjCSoF7hk8PD0gZWpXIdGO4WXgF7gksFDTRnSG49Z+JYdNhoI6AWu
+        AHz87sDOVPSdPLoJfwTzAlcEXmodlNciV5PROmWjWWCGQF7gCsFPXa4fjZxNZoMdUgwCeYErBk/1Cmza
+        pHzN5S4+6Y8gXuAawNf5KG1FoUuseX4I4gWuCbzVigVJaO+LYi+sE8ALXBN4q2Up0hZbP8qa54MAXuAa
+        wd8vDGyO5Sprmg8CeIFrBH93QkkLy2yxpvkggBe4ZvA4aQlnvbec/51lDvYC1wwenzGwOpb8qw9wsBe4
+        ZvBYyzYmcZg1DYeDvcA1g8eHDayOZbk1DYeDvcA1g8eLBlbHkv+nEgd7gWsGj48eWB2LX6LbDB5rs5Ek
+        fJDVZvDYfyZ1FfzVjY6khw6brWk+COAFrhH8PWFgcyxXWtN8EMALXBN4q4cN2g4wiWXWPB8E8ALXBN6e
+        PLA4Fn9c2FbwdT+UNj9rvTXPD0G8wBWDp9o66LHI3Xi08k/xrYwI4gWuEPzU2tZpxRWX2SHFIJAXuCLw
+        8isoy7TZp5FPm20LeLgnui1yMx1NfD/aDi0OwbzAJYF3E9Bp6HUZmZEL7PDRQEAvcAngmx4Bapu9ELRd
+        kL981mTw64Pohyjry2ZD/PXRpoNXJyJtpxeCvnPXoXJ2fiGwF7ggeKTFTLMOorbFl3BoMngzCa1Fb8uo
+        QH6OfBGWpoIvmmbz18ihMPRm4ectTPlwMi9wAPgxHeUZRGknFx03zUJVAyf0AmcEL45Hz0WuhPE79HEL
+        Uy2c2AucAh5oEKXFy0LR4z7d6Khvex5O7gWOgdwnonNQnkGUVswpfxCVBp3wAo8BeR+O/hY5EIYGUZ+z
+        MPVDZ7zA20C+GkRpc44s+ypti2Y/ahA11UI1AzrkBQbyHG5Pq5sPodyD9rNQzYKO9b7A5PgxdGeUbRj/
+        QvUOotKgc70tMLkNB1Hbb4yVBQ2idrVQzYVO9rLA5PVppL2CQ9HyR0stTPOhs70qMPnMQHkHUVrEe7KF
+        agd0uBcFJo8ie/z/Fs23UO2Cjne+wOSQZ4NooUHUSaicZ7VVQOc7W2D6ri3eL0ChgyhdvrXH8IcsVHsh
+        iU4WmH5/Bj0YZRDGP9ASC9N+SKZTBaa/s5A+faEMB1H538VtIiTUiQLTz+Eg6kV1OpBfo30sVLcgsdYX
+        mD5+At0b9TaMl1C7B1FpkNwxyjSBg61p46BvU5Auq7q8hqBB1EY0w0J1F5JcrIwTWGxNGwX9OgI9FPUw
+        jIdRI3MqBZJN2rRJrLamjYD+aLX0pEVL4ngLnYeKvVDdNkh4trJPYJ01rRX6oeUOtIB20sqscdyO5lmo
+        /kHySbfvfm/NaoM+HIA2Rb0JQ28ZNOoKVAuYoP/wODQgmWtNK4XzTkUXI005DUFTWq9A0y1Uv8EIfTcl
+        UXytiEA4p1ZgfSI6exh/RodaGEdgiGY0JKEBSvEtXjLAebR+xQ06aSBvonPR6N/Q6wIY8we5lIBerirt
+        hgCxx6NTUNpWM2NxC6rla6Q1YNAXI6uSOd+ajxTiLkD3R2cI41m0ysI4SWCUPkFZnr6ssUMKQ6xpaD3K
+        M4jagEazUElfwLC025ZDLkeFpq5w/Er0pIIFon2GFloYJxTM03urWdCnPXjyGcdoS7dfKkAgbyCtqzzB
+        Qjl5wMCZSOs0ZeU+9FU000K8D/6mJXOXo+vROyiUX6E9LJxTFMzcH4XeEtT3qN7l0UoxmrX4A6SFRXQH
+        Ks+8Y6F9dI+1bjmjBGM1b1i/f+tAn/IfoZ2tO04ZYPAhKHTVmKJoEHWIdcEpG8yegx6Q8yWj1eDWIB9E
+        VQ2m6x2eb6A8L0Jn4Ua0u53OqQuKoKVwNWMx9MZEHJrs9ikL7zQFijIX6THe4ygUjc5/jBZZOKfJUKhP
+        In136pOtAdJTSDcl9NNI94q1lpRubGjBsKWoXS9vNZ5x494Dl+ftYjNAVS0AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
