--- a/design_dance/f_userAct.resx
+++ b/design_dance/f_userAct.resx
@@ -145,52 +145,37 @@
         51TCfWjm+rQAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="roundedButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="b_play.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAHgAAAB4CAYAAAA5ZDbSAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        iVBORw0KGgoAAAANSUhEUgAAADwAAAA8CAYAAAA6/NlyAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
         JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA3XAAAN1wFCKJt4AAAAB3RJ
-        TUUH4wINDQQbMn/XigAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAmKSURBVHhe
-        7Z1pzB1VGccLXahtA7aNNKKFlgqBokCDhAoNim3R0tIPLKkUlxgTPkhYGtZIEzAukKJFhRLAJiRoFIGQ
-        oIQ9REVSIUqtSwRkC1tkkx1ckPL7z31u0pR3ljNzZ39+yf/Te+aZ8/yf9849d+bMOePKZOvWrQehs9BP
-        0Gb0T/QyEs+hv6Bb0PloKZpqhzpNhSLNQd9HT6BQXkdXo8MtnNMUKMre6Br0PzQK7kWLLLxTFxRhIlqL
-        3kZlcCPa3U7nVAnGz0V/UhVKRpfuNWiCndopG8xeiDRoqhL9My20LjhlgclHoLIuyWm8gy5FO1t3nFGC
-        sQeiV1AIGnhtQT9DVyCNsvXT6R6U9x/lGXScdcsZBRg604zNyib0ZTTdQrwP/jYJLUO/QHlG4DejORbO
-        KQJGqghZeBAtscMywzH7opsUIJA30JnIB2F5wbxj5WQG9P042Q7LBcevRE8qWCA+CMsDpo1H+lQm8S46
-        1Q4pDLGmofUo9LL9f7QB7WKhnDQw60tyLoW11nykEHcBuj86QxjPolUWxkkCo/4YWRaPHhjsYM1HDrF1
-        BTkFvYpCuRXtaaGc7cGcvSKb4nkTfcSalwrn2Q3doJMGoj6eiyZaKGcIppwnhxL4njWtDM65AuV5WqXH
-        k4daGEdgyO2RNWOjgVUtv0E571R0McozCLsSxf427xUY8aJciWGTNasN+nCA+hH1JgzdR19tYfoJBsyO
-        rIhnnTWtFfqxI/o6Cr2FKnSFmmeh+gWJa8pNEidY00ZAfz6Mro16FsZbSGONSRaqH5DwEmWfwGetaaOg
-        X3ralXZjZiweRostTPch2WOitOM52Jo2Dvo2BV2I/quOBqCB40Y0w0J1F5I8ThkncJA1bSz0UXPF7o56
-        G8ZL6CRU2g2c2iG51hdY0M8dkB5bvqBOB/IbtK+F6hYk1okCD6G/s5BmfuoyHIIu8xehnSxUNyChThV4
-        CP0+Ej0SZRDG31F3pvKSTCcLLOj7B9C30X+USAC6c7bSwrQbEulsgYeQgx6m3BVlk52H0I4Wor2QROcL
-        LMhDg7CvIY2cszLbDm8vJNGLAg8hn11R1kHYR+2w9kISvSrwEPJajHRXK44HrGm7IZFeFliQ22T0TfRv
-        JboNz6P9rVm7IZHeFngIOc5D30F6hqx3nbvzHJlkel/gTkMBvcBdhgJ6gbsMBfQCdxkK6AXuMhTQC9xl
-        KKAXuMtQQC9wl6GAXuCKwEu9BP9TdAfS5IJZ9qfy4CRe4ArARy1psT26JbrCmpQDJ/ACl4w8HFg5Jnqq
-        peKX8+yZwF7gksHDswdWJqJL9+jfjCSoF7hk8PD0gZWpXIdGO4WXgF7gksFDTRnSG49Z+JYdNhoI6AWu
-        AHz87sDOVPSdPLoJfwTzAlcEXmodlNciV5PROmWjWWCGQF7gCsFPXa4fjZxNZoMdUgwCeYErBk/1Cmza
-        pHzN5S4+6Y8gXuAawNf5KG1FoUuseX4I4gWuCbzVigVJaO+LYi+sE8ALXBN4q2Up0hZbP8qa54MAXuAa
-        wd8vDGyO5Sprmg8CeIFrBH93QkkLy2yxpvkggBe4ZvA4aQlnvbec/51lDvYC1wwenzGwOpb8qw9wsBe4
-        ZvBYyzYmcZg1DYeDvcA1g8eHDayOZbk1DYeDvcA1g8eLBlbHkv+nEgd7gWsGj48eWB2LX6LbDB5rs5Ek
-        fJDVZvDYfyZ1FfzVjY6khw6brWk+COAFrhH8PWFgcyxXWtN8EMALXBN4q4cN2g4wiWXWPB8E8ALXBN6e
-        PLA4Fn9c2FbwdT+UNj9rvTXPD0G8wBWDp9o66LHI3Xi08k/xrYwI4gWuEPzU2tZpxRWX2SHFIJAXuCLw
-        8isoy7TZp5FPm20LeLgnui1yMx1NfD/aDi0OwbzAJYF3E9Bp6HUZmZEL7PDRQEAvcAngmx4Bapu9ELRd
-        kL981mTw64Pohyjry2ZD/PXRpoNXJyJtpxeCvnPXoXJ2fiGwF7ggeKTFTLMOorbFl3BoMngzCa1Fb8uo
-        QH6OfBGWpoIvmmbz18ihMPRm4ectTPlwMi9wAPgxHeUZRGknFx03zUJVAyf0AmcEL45Hz0WuhPE79HEL
-        Uy2c2AucAh5oEKXFy0LR4z7d6Khvex5O7gWOgdwnonNQnkGUVswpfxCVBp3wAo8BeR+O/hY5EIYGUZ+z
-        MPVDZ7zA20C+GkRpc44s+ypti2Y/ahA11UI1AzrkBQbyHG5Pq5sPodyD9rNQzYKO9b7A5PgxdGeUbRj/
-        QvUOotKgc70tMLkNB1Hbb4yVBQ2idrVQzYVO9rLA5PVppL2CQ9HyR0stTPOhs70qMPnMQHkHUVrEe7KF
-        agd0uBcFJo8ie/z/Fs23UO2Cjne+wOSQZ4NooUHUSaicZ7VVQOc7W2D6ri3eL0ChgyhdvrXH8IcsVHsh
-        iU4WmH5/Bj0YZRDGP9ASC9N+SKZTBaa/s5A+faEMB1H538VtIiTUiQLTz+Eg6kV1OpBfo30sVLcgsdYX
-        mD5+At0b9TaMl1C7B1FpkNwxyjSBg61p46BvU5Auq7q8hqBB1EY0w0J1F5JcrIwTWGxNGwX9OgI9FPUw
-        jIdRI3MqBZJN2rRJrLamjYD+aLX0pEVL4ngLnYeKvVDdNkh4trJPYJ01rRX6oeUOtIB20sqscdyO5lmo
-        /kHySbfvfm/NaoM+HIA2Rb0JQ28ZNOoKVAuYoP/wODQgmWtNK4XzTkUXI005DUFTWq9A0y1Uv8EIfTcl
-        UXytiEA4p1ZgfSI6exh/RodaGEdgiGY0JKEBSvEtXjLAebR+xQ06aSBvonPR6N/Q6wIY8we5lIBerirt
-        hgCxx6NTUNpWM2NxC6rla6Q1YNAXI6uSOd+ajxTiLkD3R2cI41m0ysI4SWCUPkFZnr6ssUMKQ6xpaD3K
-        M4jagEazUElfwLC025ZDLkeFpq5w/Er0pIIFon2GFloYJxTM03urWdCnPXjyGcdoS7dfKkAgbyCtqzzB
-        Qjl5wMCZSOs0ZeU+9FU000K8D/6mJXOXo+vROyiUX6E9LJxTFMzcH4XeEtT3qN7l0UoxmrX4A6SFRXQH
-        Ks+8Y6F9dI+1bjmjBGM1b1i/f+tAn/IfoZ2tO04ZYPAhKHTVmKJoEHWIdcEpG8yegx6Q8yWj1eDWIB9E
-        VQ2m6x2eb6A8L0Jn4Ua0u53OqQuKoKVwNWMx9MZEHJrs9ikL7zQFijIX6THe4ygUjc5/jBZZOKfJUKhP
-        In136pOtAdJTSDcl9NNI94q1lpRubGjBsKWoXS9vNZ5x494Dl+ftYjNAVS0AAAAASUVORK5CYII=
+        TUUH4wINFB0pcl+37QAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAANuSURBVGhD
+        7dtZqE1RHMfxowwvZpIns4xlChlKeSNTSqF4JC/uA3khPMiDB0ORlBIeyAsRUZKEB0OEEmUocyTzUKbv
+        r6z6O+2z9z73nrPP/u/rV5+63Xu7+/8/5+6111l77VIVGYnNuIzX+IV3uI7tmIhCpD+OQQ3+TnAe4+A2
+        8/EJUc1V8gM70Amusgg/Ud6Q3unnuIEnf78X5Sn0grnIaHyHbeAbtmAQbHphA97A/n5wHH2Q27TBVdii
+        H2AM4tIT+xB1ruu0WIW2yF1mwRb7HkORNtNwF/ZvBDoNJiBXOQxb5EpUmw5Yj6+wf0s0LuxEF+QirxCK
+        +4DOaG4G4yxsw8EzLEBDo/PQFnUBtcgS2BfSOol+aEj0jthiDqJW6Y69iBrUPmMN2iHTDIctZA9qnam4
+        A3uc4BYmIbNk0bDSHmvxBfZ4okFtN1oydqROVg2HDMQZ2GMGl1D3ZN1wyGK8hD221H0+3qiGlW7Q8cL8
+        /QTqnkY2HDIEmq1lMg3NQ8OZ5n/DKHS8NjwFM6Dre1Xx2PAKhHq1oKhre+p4bLh84qLruVZYU8Vjw8th
+        a5bH0Ce/xHg9h5ehfA3uABLjtWFlDuxHT32tfmLjuWFlF2z92xAb7w3rLoldS7+P2HhvWLmGUL/+rTui
+        YorQ8BHYHvSuV0wRG45dICxCw5pthfoL/y9dPmjdQ2y8N1x+WdqK2HhueC7sxEPv9DDExmvDUVPL/UiM
+        t4b7Qot9tmZ5hB5IjJeGtcC3GlHbMV5gBFLFQ8PaLXQTts5As6wBSJ08N6z7yRqF7WUn0H3odSjMEs9s
+        VNpAo61S1exQ+Cd5a1gTiVOwNQVaylkK7UlpdvLSsAalJnyErUd0rdVqRqolnKTkoeHJuA1bR6Cp4nTU
+        LI1suCu0gy9qUNJ95I2oelBKSqMa1qCknXv22ME56AZbXZJ1w7pmnoY9ZqAJhAaluiarhrV5RYNS1Ewp
+        DEqppoYtTRYN52pTS6vbttTqNqYpdnOJLvyF3nqoHIItTINLtXG1uXQmbIHaYJq4VGLibvuwJuNXYAt9
+        iLGIi9sN4sooaMu/LTo8AqDz0qY3NO1z+whAyEJEzWtFA5tWHfSwR9TPxdVDHiHzEPURLY7bx3hCtDJ4
+        FFHnZjlN9F0/qGWjaecmXER4FO8tNMDpxvN45Dyl0h8XqkSw4mcz9gAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pi_videoM.OcxState" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACFTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5BeEhvc3QrU3RhdGUBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAtwAAAAIB
+        AAAAAQAAAAAAAAAAAAAAAKIAAAAAAwAACAAAAAAABQAAAAAAAADwPwMAAAAAAAUAAAAAAAAAAAAIAAIA
+        AAAAAAMAAQAAAAsA//8DAAAAAAALAP//CAACAAAAAAADADIAAAALAAAACAAKAAAAbgBvAG4AZQAAAAsA
+        AAALAAAACwD//wsA//8LAAAACAACAAAAAAAIAAIAAAAAAAgAAgAAAAAACAACAAAAAAALAAAAnyUAAJEX
+        AAAL
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
